# Openfabric_ImageTo3D_DualMemory

./: README.md
app/: Dockerfile  app_gradio.py  llm_client.py  main.py  memory_manager.py  pipeline_logic.py  pyproject.toml  start.sh
app/datastore/: state.json
